--- a/ERPWeb/Views/AgroConfiguration/CreateRawMaterialIssueStock.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateRawMaterialIssueStock.cshtml
@@ -332,7 +332,7 @@
                     RawMaterialIssueStockDetailsId: 0,
                     RawMaterialId: tds.eq(5).html(),
                     Quantity: tds.eq(3).html(),
-                    Unit: tds.eq(2).html(),
+                    UnitId: tds.eq(2).html(),
 
                 });
             })
