--- a/ERPWeb/Views/AgroConfiguration/CreateRawMaterialStock.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateRawMaterialStock.cshtml
@@ -108,12 +108,13 @@
                                     <th style="width:5%">#SL</th>
                                     <th style="width:15%">Supplier Name</th>
                                     <th style="width:15%">Raw Material Name</th>
-                                    <th style="width:10%">Unit</th>
+                                    <th style="width:10%">UnitName</th>
                                     <th style="width:10%">Quantity</th>
                                     <th style="width:10%">ExpireDate</th>
                                     <th style="width:10%">Action</th>
                                     <th class="hide RawMaterialId"></th>
                                     <th class="hide RawMaterialSupplierId"></th>
+                                    <th class="hide UnitId"></th>
 
                                 </tr>
                             </thead>
@@ -252,14 +253,16 @@
                 var td1 = "<td class='text-center'><b>" + (sl + 1) + "</b></td>"
                 var td2 = "<td class='text-center'>" + dropDownSelectedText("ddlRawMaterialSupplierName") + "</td>";
                 var td3 = "<td class='text-center'>" + dropDownSelectedText("ddlRawMaterialName") + "</td>";
+                    //var td4 = "<td class='text-center'>" + dropDownSelectedText("ddlUnit") + "</td>";
                 var td4 = "<td class='text-center'>" + ddlUnit.val() + "</td>";
                 var td5 = "<td class='text-center text-bold'>" + ddlQuantity.val() + "</td>";
                 var td6 = "<td class='text-center text-bold'>" + ExpireDate.val() + "</td>";
                 var td7 = "<td class='text-center'><a href='#' class='btn btn-sm btn-danger data-onfly-del'><i class='far fa-trash-alt'></i> Delete</a></td>";
                 var td8 = "<td class='hide RawMaterialId'>" + ddlRawMaterialName.val() + "</td>";
                 var td9 = "<td class='hide RawMaterialSupplierId'>" + ddlRawMaterialSupplierName.val() + "</td>";
-                
-                var tr = "<tr>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 +td9 +"</tr>";
+                var td10 = "<td class='hide UnitId'>" + ddlUnit.val() + "</td>";
+
+                    var tr = "<tr>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 + td9 + td10 + "</tr>";
 
          
                     $("#tblSingleItems tbody").append(tr);
@@ -340,7 +343,7 @@
                     RawMaterialStockDetailId: 0,
                     RawMaterialId: tds.eq(7).html(),
                     Quantity: tds.eq(4).html(),
-                    Unit: tds.eq(3).html(),
+                    UnitId: tds.eq(3).html(),
                     ExpireDate: tds.eq(5).html(),
                     RawMaterialSupplierId: tds.eq(8).html()
 
