--- a/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeDetail.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeDetail.cshtml
@@ -16,7 +16,8 @@
             <td style="width:18%">Product Qty</td>
             <td style="width:20%"><b>@info.FGRQty</b></td>
             <td style="width:13%">Product Unit</td>
-            <td style="width:20%"><b>@info.FGRUnit</b></td>
+            <td style="width:20%"><b>@info.UnitName</b></td>
+            <td style="width:20%" class="hide"><b>@info.UnitId</b></td>
         </tr>
     }
 </table>
@@ -37,7 +38,8 @@
                 <td class="text-center">@sl</td>
                 <td class="text-center">@item.RawMaterialName</td>
                 <td class="text-center text-bold">@item.FGRRawMaterQty</td>
-                <td class="text-center">@item.FGRRawMaterUnit</td>
+                <td class="text-center">@item.UnitName</td>
+                <td class="hide">@item.UnitId</td>
                 
             </tr>
         }
