--- a/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeEdit.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeEdit.cshtml
@@ -22,7 +22,8 @@
         <td style="width:13%">Product Qty</td>
         <td style="width:5%"><b>@info.FGRQty</b></td>
         <td style="width:10%">Product Unit</td>
-        <td style="width:6%"><b>@info.FGRUnit</b></td>
+        <td style="width:6%"><b>@info.UnitName</b></td>
+        <td style="width:6%" class="hide"><b>@info.UnitId</b></td>
         <td style="width:10%">Receipe Status</td>
         <td style="width:20%">
             @info.Status
@@ -53,7 +54,8 @@
             <td class="text-center">@item.RawMaterialName</td>
 
             <td class="form-control form-control text-center text-bold" id="txtFGRRawMaterQty" contenteditable='true'>@item.FGRRawMaterQty</td>
-            <td class="text-center">@item.FGRRawMaterUnit</td>
+            <td class="text-center">@item.UnitName</td>
+            <td class="hide">@item.UnitId</td>
 
         </tr>
         }
