--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
@@ -12,7 +12,7 @@
                 @*<th>Organization name</th>*@
                 @*<th>Depot Name</th>*@
                 <th>Raw Material</th>
-                <th>Unitname</th>
+                <th>UnitName</th>
                 <th>Status</th>
                 @*<th>Expire Date</th>*@
                 <th class="hide">organizationId</th>
@@ -34,10 +34,11 @@
                 <td class="hide">@raw.OrganizationName</td>
                 @*<td>@raw.DepotName</td>*@
                 <td>@raw.RawMaterialName</td>
-                <td>@raw.Unit</td>
+                <td>@raw.UnitName</td>
                 <td>@raw.Status</td>
                 @*<td>@raw.ExpireDate.Value.ToShortDateString()</td>*@
                 <td class="hide">@raw.OrganizationId</td>
+                <td class="hide">@raw.UnitId</td>
                 <td>
                     <a href="#" class="btn btn-warning btn-sm data-edit-item-rawMaterialId" data-edit-item-rawMaterialId="@raw.RawMaterialId"><i class="fa fa-pen"></i>Edit</a>
                 </td>
