--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialIssueStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialIssueStockList.cshtml
@@ -12,7 +12,7 @@
             <th style="vertical-align:middle" class="hide"></th>
             <th style="vertical-align:middle">Raw Material Name</th>
             <th style="vertical-align:middle">Quantity</th>
-            <th style="vertical-align:middle">Unit</th>
+            <th style="vertical-align:middle">UnitName</th>
             <th style="vertical-align:middle">Action</th>
         </tr>
     </thead>
@@ -25,7 +25,7 @@
                 <td class="hide">@item.RawMaterialIssueStockId</td>
                 <td class="text-center">@item.RawMaterialName</td>
                 <td class="text-center">@item.Quantity</td>
-                <td class="text-center">@item.Unit</td>
+                <td class="text-center">@item.UnitName</td>
 
                 <td class="text-center">
 
