--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockList.cshtml
@@ -15,7 +15,7 @@
             <th style="vertical-align:middle">Status</th>
             <th style="vertical-align:middle">Raw Material Name</th>
             @*<th style="vertical-align:middle">Quantity</th>*@
-            <th style="vertical-align:middle">Unit</th>
+            <th style="vertical-align:middle">UnitName</th>
 
 
             <th style="vertical-align:middle">StockIn</th>
@@ -23,6 +23,7 @@
             @*<th style="vertical-align:middle">Current Stock</th>*@
 
             <th style="vertical-align:middle">Expire Date</th>
+            <th style="vertical-align:middle" class="hide"></th>
             @*<th style="vertical-align:middle">Action</th>*@
         </tr>
     </thead>
@@ -55,7 +56,7 @@
             <td class="text-center">@item.Status</td>
             <td class="text-center">@item.RawMaterialName</td>
             @*<td class="text-center">@item.Quantity</td>*@
-            <td class="text-center">@item.Unit</td>
+            <td class="text-center">@item.UnitName</td>
 
 
             <td class="text-center">@item.StockIn</td>
@@ -70,7 +71,7 @@
             {
                 <td class="text-center">@item.ExpireDate.Value.ToShortDateString()</td>
             }
-
+            <td class="hide">@item.UnitId</td>
 
             @*<td class="text-center">
 
