--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -7,6 +7,10 @@
         background-color: black !important;
         color: white !important;
     }
+    table.tadd tr th {
+        background-color: darkcyan !important;
+        color: white !important;
+    }
 </style>
 <div class="row" style="background-color:#e7f1f6">
     <div class="col-md-12">
@@ -215,7 +219,7 @@
                         <div class="card-body">
 
                             <div class="card-body table-responsive p-0 shadow" style="height: 200px;">
-                                <table class="table table-head-fixed text-nowrap" id="tblPstockrawmaterial">
+                                <table class="table table-head-fixed text-nowrap tadd" id="tblPstockrawmaterial">
                                     <thead>
                                         <tr class="text-center" style="color:black">
 
