--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -103,18 +103,18 @@
 
 
                                 @*addbodey*@
-                                <div class="card-body shadow" style="background-color:#e7f1f6">
+                                <div class="card-body shadow" @*style="background-color:#e7f1f6"*@>
                                     <div class="row">
 
 
 
-                                        <div class="col-md-12">
-                                            <div class="container-fluid" style="background-color:#e7f1f6">
+                                        <div class="col-md-4">
+                                            <div class="container-fluid" @*style="background-color:#e7f1f6"*@>
                                                 @*border-right:4px solid #808080*@
                                                 <h5 style="border-bottom:2px solid #08054e">Information</h5>
                                                 <div class="row justify-content-center">
 
-                                                    <div class="col-md-6">
+                                                    <div class="col-md-12">
 
                                                         <div class="row">
                                                             <div class="col-md-6">
@@ -153,12 +153,12 @@
 
 
 
-                                        <div class="col-md-12">
-                                            <div class="container-fluid" style="background-color:#e7f1f6;">
+                                        <div class="col-md-8">
+                                            <div class="container-fluid" @*style="background-color:#e7f1f6;"*@>
                                                 <h5 style="border-bottom:2px solid #f87878">RawMaterial</h5>
                                                 <div class="row justify-content-center">
 
-                                                    <div class="col-md-6">
+                                                    <div class="col-md-12">
 
                                                         <div class="row">
                                                             <div class="col-md-3">
