--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -27,7 +27,6 @@
                 </ul>
 
             </div>
-
         </div>
 
         <div class="card-body shadow">
@@ -372,7 +371,7 @@
             //$("#PurchaseDetails").modal('show');
             var id = $(this).parent().parents('tr').children('td').eq(1).html();
             if (TryParseInt(id, 0) > 0) {
-                debugger;
+                //debugger;
                 var data = { flag: "Detail", PRawMaterialStockId: 0, id: id };
                 $.when(getReqWithData('html', 'GET', '/AgroConfiguration/GetPRawmaterialStockList', data)).then(function (res, status) {
                     console.log(status);
@@ -423,7 +422,7 @@
 
         $("#addTolist").click(function (e) {
             //alert();
-            debugger;
+            //debugger;
             e.preventDefault();
 
 
@@ -474,7 +473,7 @@
         //save
         $("#saveButton").click(function (e) {
             //alert();
-            debugger
+            //debugger
             e.preventDefault();
 
             if (validatesave()) {
@@ -484,7 +483,7 @@
                 bootbox.confirm("Are you sure you want to Save this", function (result) {
                     if (result) {
                         //alert("ok");
-                        debugger;
+                       // debugger;
                         var totalsub = $('.totalsub').text();//initilize class total
 
                         var info = { RawMaterialSupplierId: TryParseInt(ddlSupplierName.val(), 0), ChalanNo: ddlChallanNo.val(), InvoiceNo: ddlInvoiceNo.val(), InvoiceDate: ddlInvoiceDate.val(), TotalAmount: totalsub };
@@ -511,7 +510,7 @@
                         var data = JSON.stringify({ info: info, details: details });
                         $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveRawmaterialPurchaseStock', data, getToken())).then(function (res, status) {
                             if (res === true) {
-                                debugger;
+                                //debugger;
                                 $('.toastrDefaultSuccess').trigger('click');
                                 setTimeout(function () {
                                     redirectPage('@Url.Action("GetPRawmaterialStockList")');
@@ -568,7 +567,7 @@
 
         //remove
         $(document).on("click", "a.data-onfly-del", function (e) {
-            debugger;
+            //debugger;
             e.preventDefault();
             var index = $(this).parent().parents('tbody tr').index();
             var tds = $(this).parent().parents('tbody tr').children('td');
@@ -651,7 +650,7 @@
 
         //validationsave
         function validatesave() {
-            debugger;
+            //debugger;
             var isValid = true;
             $(".error").addClass('hide');
 
